# return

./: AI_ROADMAP.md  Cargo.toml  README.md  TODO.md
src/: block.rs  input.rs  main.rs  main_loop.rs  renderer.rs  shell.rs
src/agent_mode_eval/: ai_client.rs  conversation.rs  mod.rs  tools.rs
src/ai/: assistant.rs  context.rs  mod.rs  prompts.rs
src/ai/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/api/: ai.rs  mod.rs
src/asset_macro/: mod.rs
src/cli/: mod.rs
src/cloud/: sync_manager.rs
src/collaboration/: session_sharing.rs
src/command/: mod.rs  pty.rs
src/config/: mod.rs  preferences.rs  theme.rs  yaml_theme.rs  yaml_theme_manager.rs
src/drive/: mod.rs
src/fuzzy_match/: mod.rs
src/graphql/: mod.rs
src/integration/: mod.rs
src/languages/: mod.rs
src/lpc/: mod.rs
src/markdown_parser/: mod.rs
src/mcq/: mod.rs
src/natural_language_detection/: mod.rs
src/performance/: benchmarks.rs  mod.rs
src/plugins/: lua_engine.rs  mod.rs  plugin_manager.rs  wasm_runtime.rs
src/resources/: mod.rs
src/serve_wasm/: mod.rs
src/settings/: ai_settings.rs  appearance_settings.rs  indexing_settings.rs  keybinding_editor.rs  mod.rs  theme_editor.rs  yaml_theme_ui.rs
src/string_offset/: mod.rs
src/sum_tree/: mod.rs
src/syntax_tree/: mod.rs
src/ui/: ai_sidebar.rs  collapsible_block.rs  command_palette.rs  mod.rs  ratatui_block.rs  terminal_command_display.rs
src/virtual_fs/: mod.rs
src/watcher/: mod.rs
src/websocket/: mod.rs
src/workflows/: debugger.rs  executor.rs  manager.rs  mod.rs  ui.rs
themes/: gruvbox-dark.yaml  nord.yaml
v0-prompts/: ai_command_bar.md  theme_switcher.md  welcome_screen.md
workflows/: docker-cleanup.yaml  find-large-files.yaml  git-status.yaml
