[package]
name = "neotermagent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core GUI framework
iced = { version = "0.12", features = ["tokio", "debug", "advanced"] }
iced_graphics = "0.12"
iced_winit = "0.12"
iced_widget = "0.12"
iced_futures = "0.12"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }

# Async runtime
tokio = { version = "1.38", features = ["full"] } # For async operations
tokio-stream = "0.1" # Added for streaming HTTP responses
async-stream = "0.3.5"
async-std = "1.12.0"
async-tempfile = "0.5.0"
async-walkdir = "0.3.0"

# UUID generation
uuid = { version = "1.9.1", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4.38", features = ["serde"] }

# Configuration and serialization
serde = { version = "1.0.203", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0.117"
toml = "0.8.12"
serde_yaml = "0.9.34" # For YAML config/themes

# Configuration management
config = "0.13"
directories = "5.0.1" # For config paths

# Error handling
anyhow = "1.0.86" # For error handling
thiserror = "1.0.61"

# Fuzzy matching and search
fuzzy-matcher = "0.3"
skim = "0.10"

# Regular expressions
regex = "1.10.4"

# URL parsing
url = "2.5.0"

# HTTP client for importing workflows and GraphQL
reqwest = { version = "0.12.4", features = ["json", "stream"], default-features = false } # Added "stream" feature
reqwest-eventsource = "0.5.0"
async-openai = "0.20.0"

# Web server for API
warp = "0.3.6" # Added for API server
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.6.0"
futures = "0.3"
futures-util = "0.3.30"
futures-util = "0.3.30"

# File system operations
notify = "6.1.1" # For file system watching
walkdir = "2.5.0"
inotify = "0.10"
notify-debouncer-mini = "0.4"
# fuser = "0.14" # Added for Virtual FS - requires FUSE libraries on macOS
libc = "0.2.153" # Marked for removal
ndarray = "0.15.6" # Marked for removal
winit = "0.28"

# Markdown parsing
pulldown-cmark = "0.9"
md-to-html = "0.1.0"
md-to-text = "0.1.0"
mdbook = "0.4.40"
mdbook-mermaid = "0.12.0"
mdbook-toc = "0.1.0"

# Syntax highlighting
syntect = "5.0"

# Tree-sitter for syntax trees
tree-sitter = "0.22.0"
tree-sitter-bash = "0.20"
tree-sitter-highlight = "0.22.0"
tree-sitter-tags = "0.22.0"

# Terminal/PTY support
portable-pty = "0.7.0"
vte = "0.13.0" # Added for ANSI escape code parsing

# Logging
log = "0.4.21" # For logging
env_logger = "0.11.3" # For logging setup
tui-textarea = "0.4.0"

# GPU acceleration (optional)
wgpu = "0.19"
cosmic-text = "0.12"

# WebSocket support for collaboration
tokio-tungstenite = "0.22.0"

# WASM runtime for plugins
wasmtime = "20.0.0"
wasmtime-wasi = "20.0.0"
wasmer = "4.2" # Added for Agent Mode Eval
deno_core = "0.260" # Added for Agent Mode Eval

# Image processing
image = "0.24"

# Clipboard support
arboard = "3.0"

# Performance profiling
pprof = { version = "0.12", features = ["flamegraph"] }

# Color manipulation
palette = "0.7"

# File dialog
rfd = "0.12"

# Git repository support
git2 = "0.18"

# Virtual File System (FUSE)
# tokio-fuse = "0.1" # For async FUSE operations

# ONNX Runtime for Natural Language Processing
ort = "2.0.0" # Marked for removal

# Sentry for crash reporting in Rust
sentry = { version = "0.32.0", features = ["backtrace", "panic"] } # Updated to latest version

# Missing dependencies
tracing = "0.1.40"
thiserror = "1.0.61"
mlua = { version = "0.9", features = ["lua54"], default-features = false }
unicode-segmentation = "1.10"
async-graphql = { version = "7.0.0", features = ["tracing"] }
async-graphql-warp = "7.0.0"

lazy_static = "1.4.0"
rand = "0.8.5"
async-trait = "0.1.80"
base64 = "0.22.1"
async-recursion = "1.1.1"
once_cell = "1.19.0"
semver = "1.0.23"
clap = { version = "4.5.7", features = ["derive"] } # Added for CLI integration
whoami = "1.4" # For user context in Sentry
dotenv = "0.15" # For environment variable loading
indicatif = "0.17.8"
pin-project-lite = "0.2.14"
prost = "0.12.6"
prost-types = "0.12.6"
rayon = "1.10.0"
sha2 = "0.10.8"
sled = "0.34.7"
smol = "2.0.0"
socket2 = "0.5.6"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
tar = "0.4.40"
tempfile = "3.10.1"
tiny_http = "0.12.0"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
zip = "0.6.6"
zstd = "0.13.0"
# AI SDK dependencies
ollama-rs = "0.1.0"
openai-api-rust = "0.1.0"
# TUI dependencies
crossterm = "0.27.0"
ratatui = "0.26.1"
tui-textarea = "0.4.0"
# Database
diesel = { version = "2.1.5", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
# Other
sysinfo = "0.30.11"
# For testing
mockall = "0.12.1"
nix = { version = "0.28.0", features = ["process", "signal"], optional = true }
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt"], optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["full", "macros"] }

[features]
default = []
unix-pty = ["nix"]
windows-pty = ["winapi"]
