[package]
name = "neotermagent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core GUI framework
iced = { version = "0.12", features = ["tokio", "debug", "image", "svg", "canvas", "wgpu", "system"] }
iced_graphics = "0.12"
iced_winit = "0.12"
iced_widget = "0.12"
iced_futures = "0.12"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }

# Async runtime
tokio = { version = "1", features = ["full"] } # For async operations
tokio-stream = "0.1" # Added for streaming HTTP responses
async-stream = "0.3"
async-std = "1.12"
async-tempfile = "0.5.0"
async-walkdir = "2.1.0"

# UUID generation
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9" # For YAML config/themes

# Configuration management
config = "0.13"
directories = "5.0.1" # For config paths

# Error handling
anyhow = "1.0" # For error handling
thiserror = "1.0"

# Fuzzy matching and search
fuzzy-matcher = "0.3"
skim = "0.10"

# Regular expressions
regex = "1.10"

# URL parsing
url = "2.5"

# HTTP client for importing workflows and GraphQL
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false } # Added "stream" feature
reqwest-eventsource = "0.5.0"
async-openai = "0.20.0"

# Web server for API
warp = "0.3.6" # Added for API server
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.6"
futures = "0.3"
futures-util = "0.3"

# File system operations
notify = "6.1" # For file system watching
walkdir = "2.5"
inotify = "0.10"
notify-debouncer-mini = "0.4"
# fuser = "0.14" # Added for Virtual FS - requires FUSE libraries on macOS
libc = "0.2" # Marked for removal
ndarray = "0.15.6" # Marked for removal
winit = "0.28"

# Markdown parsing
pulldown-cmark = "0.9"
mdbook = "0.4.40"

# Syntax highlighting
syntect = "5.0"

# Tree-sitter for syntax trees
tree-sitter = "0.22"
tree-sitter-bash = "0.20"
tree-sitter-highlight = "0.22"
tree-sitter-tags = "0.22"

# Terminal/PTY support
portable-pty = "0.7.0"
vte = "0.13.0" # Added for ANSI escape code parsing

# Logging
log = "0.4" # For logging
env_logger = "0.11" # For logging setup
tui-textarea = "0.4.0"

# GPU acceleration (optional)
wgpu = "0.19"
cosmic-text = "0.12"

# WebSocket support for collaboration
tokio-tungstenite = "0.21"

# WASM runtime for plugins
wasmtime = "20.0"
wasmtime-wasi = "20.0"
wasmer = "4.2" # Added for Agent Mode Eval
deno_core = "0.260" # Added for Agent Mode Eval

# Image processing
image = "0.24"

# Clipboard support
arboard = "3.0"

# Performance profiling
pprof = { version = "0.12", features = ["flamegraph"] }

# Color manipulation
palette = "0.7"

# File dialog
rfd = "0.12"

# Git repository support
git2 = "0.19"

# Virtual File System (FUSE)
# tokio-fuse = "0.1" # For async FUSE operations

# ONNX Runtime for Natural Language Processing
ort = "2.0.0-rc.10" # Marked for removal

# Sentry for crash reporting in Rust
sentry = { version = "0.32", features = ["backtrace", "panic"] } # Updated to latest version
sentry-backtrace = "0.32"

# Missing dependencies
tracing = "0.1"
mlua = { version = "0.9", features = ["lua54"], default-features = false }
unicode-segmentation = "1.10"
async-graphql = { version = "7.0.0", features = ["tracing"] }
async-graphql-warp = "7.0.0"
itertools = "0.12"
async-channel = "2.3"
async-lock = "3.3"
base64 = "0.22"
bincode = "1.3"
dashmap = "5.5"
dirs = "5.0"
flate2 = "1.0"
fs_extra = "1.3"
glob = "0.3"
graphql_client = { version = "0.14", features = ["reqwest"] }
graphql_parser = "0.4"
http = "1.1"
jsonwebtoken = "9.3"
lazy_static = "1.4"
libloading = "0.8"
lua = "0.1"
md-to-html = "0.1"
open = "5.1"
parking_lot = "0.12"
percent-encoding = "2.3"
prost = "0.12"
prost-types = "0.12"
rkyv = { version = "0.8", features = ["validation"] }
rkyv_derive = "0.8"
rmp-serde = "1.1"
rust_embed = "8.4"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tar = "0.4"
tempfile = "3.10"
zip = { version = "0.6", features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }

[features]
default = []
unix-pty = ["nix"]
windows-pty = ["winapi"]
